--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,8 +4,19 @@
     <link rel="stylesheet" href="/css/main.css"/>
 </head>
 <body>
-    <h1>My Ecomerce</h1>
-    <ul class="products__list"></ul>
+
+    <nav class="nav"></nav>
+
+    <main class="main">
+        <h1 class="siteHeading">My Ecomerce</h1>
+        <ul class="products__list"></ul>
+
+    </main>
+
+    <footer class="footer">
+        2022&copy; Copyrights | UEK-student
+    </footer>
+    
 
     <script type="text/javascript" src="/js/index.js"></script>
 </body>
